<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityResult">

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/Close"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:translationZ="@dimen/activity_horizontal_margin" />


    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_above="@id/btnClose">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_assesment_has_been_successfully_created" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/here_is_your_result" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/green"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="10dp"
                    android:text="@string/pass"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvGrandTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/tvPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nos_module_wise"

                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <com.jskgmail.indiaskills.util.MyListView
                    android:id="@+id/lvModuleWise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/white"
                    android:dividerHeight="0dp"></com.jskgmail.indiaskills.util.MyListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic_wise"
                    android:textColor="@color/colorPrimary"

                    android:textStyle="bold" />

                <com.jskgmail.indiaskills.util.MyListView
                    android:id="@+id/lvTopicWise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/white"
                    android:dividerHeight="0dp"></com.jskgmail.indiaskills.util.MyListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_wise"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <com.jskgmail.indiaskills.util.MyListView
                    android:id="@+id/lvTheoryWise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/white"
                    android:dividerHeight="0dp"></com.jskgmail.indiaskills.util.MyListView>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>