<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">


        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="6dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/select_candidate"
                android:textColor="@color/white" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityInstruction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewinstruction"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="19dp"
                android:keepScreenOn="true"
                android:overScrollMode="always"
                android:scrollIndicators="right"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarSize="12dp"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/Instruction"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txt_instruction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="6dp"
                        android:scrollIndicators="right"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:scrollbarSize="12dp"
                        android:scrollbarStyle="outsideInset"
                        android:scrollbars="vertical"
                        android:text="No Instrution Given"
                        android:textColor="@color/cardview_dark_background" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:text="Select Candidate"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16dp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/dd_batchlist"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"></Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/btn_question"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:padding="12dp"
                android:text="@string/START"
                android:textSize="17sp"
                android:theme="@style/PrimaryButton"
                android:translationZ="@dimen/activity_horizontal_margin" />

            <LinearLayout
                android:id="@+id/llComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/completeall"
                    android:textSize="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/completebatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:enabled="false"
                android:padding="12dp"
                android:text="@string/Completetest"
                android:textSize="17sp"
                android:theme="@style/PrimaryButton"
                android:translationZ="@dimen/activity_horizontal_margin" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
